fix less file : KP-6882 Designer: layout problem on Compile errors and Warnings lists in reduced browser window

--- a/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-designer-verify-popover.css.less
+++ b/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-designer-verify-popover.css.less
@@ -52,7 +52,7 @@
 
         .modal-body {
             padding: 0px;
-            height: calc(100% - 115px);
+            height: ~"calc(100% - 115px)";
 
             .error-message {
                 .georgia-font();
